syntax = "proto3";
package main;
option go_package = ".";
import "google/protobuf/timestamp.proto";

message GarageFacility {
  int32 id = 1;
  string type = 2;
  string name = 3;
  string address = 4;
}

message Transport {
  int32 id = 1;
  string type = 2;
  optional GarageFacility garageFacility = 4;
}

message Brigade {
  int32 id = 1;
  int32 foremanId = 2;
}

message Driver {
  int32 id = 1;
  string name = 2;
  string salary = 3;
  optional Transport transport = 4;
  optional Brigade brigade = 5;
}

message Route {
  int32 id = 1;
  google.protobuf.Timestamp startTime = 2;
  google.protobuf.Timestamp endTime = 3;
  repeated Transport transports = 4;
  string name = 5;
}

message CargoTransportationInfo {
  int32 id = 1;
  string cargoType = 2;
  string cargoName = 3;
  string cargoWeight = 4;
  string cargoCost = 5;
  google.protobuf.Timestamp dateFrom = 6;
  google.protobuf.Timestamp dateTo = 7;
  optional Driver driver = 8;
}

message TransportUnit {
  int32 id = 1;
  string name = 2;
  string description = 3;
  string type = 4;
}

message RepairWorkInfo {
  int32 id = 1;
  google.protobuf.Timestamp startTime = 2;
  google.protobuf.Timestamp endTime = 3;
  Transport transport = 4;
  TransportUnit unit = 5;
  string description = 6;
  float cost = 7;
  string state = 8;
}

